# ai_automation_firm_simulation

./: .gitignore  00_overview.md  01_phase1_single_firm.md  02_phase2_two_firms.md  03_phase3_market.md  04_phase4_welfare_writeup.md  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  embed_app.py  pyproject.toml  requirements.txt  simdeploy-snapshot.yml  validate_tier_a.py
.github/workflows/: sync-hf-spaces.yml
.streamlit/: config.toml
dev/spike_stlite/: import_audit.md
firm_ai_abm/: __init__.py  adjustment.py  config.py  dashboard.py  dp_optimizer.py  firm.py  forward_sim.py  margin_optimizer.py  production.py  review.py  simulate.py  strategy.py  tasks.py  theme.py  validate.py  viz.py  workers.py
notebooks/: 01_manual_notebook.ipynb  01_phase1_single_firm.ipynb  run_phase1_deliverables.py
results/: observation.md
scripts/: README.md  bundle_kernel_for_embed.py  capture_js_port_fixtures.py  check_embed_bundle_freshness.py  sweep_narrative.py  sync_requirements.py
tests/: test_alpha_cost_function.py  test_app.py  test_app_redesign.py  test_baseline_intents.py  test_cum_wage.py  test_dashboard.py  test_defaults.py  test_dp_optimizer.py  test_embed_app.py  test_firing_review.py  test_firing_timing.py  test_forward_sim.py  test_histograms.py  test_margin_optimizer.py  test_no_bare_FirmParams.py  test_replenish_hiring.py  test_requirements_sync.py  test_tasks_beta.py  test_training_delay.py  test_training_memory.py  test_workers.py
tests/fixtures/: _alpha_beta_seed0_N100.npz  _provenance.txt  phase1_baseline_all_A.parquet  phase1_baseline_all_H.parquet  (+3 more)
(+10 files in other folders)
